--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>File API 1</title>
+    <title>アークナイツTRPG、クリエラ集計</title>
     <script src="log.js"></script>
     <!-- <link href="style.css" rel="stylesheet" /> -->
   </head>
