--- a/index.html
+++ b/index.html
@@ -10,4 +10,11 @@
     <input type="file" id="file1" />
     <pre id="pre1"></pre>
   </body>
+  <footer>
+    <p>ページを作った人：KOTARU<br>
+      github：https://github.com/KOTARU8960<br>
+      X：https://x.com/KOTARU49165176
+      Discord：KOTARU8960
+    </p>
+  </footer>
 </html>
