--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <footer>
     <p>ページを作った人：KOTARU<br>
       github：https://github.com/KOTARU8960<br>
-      X：https://x.com/KOTARU49165176
+      X：https://x.com/KOTARU49165176<br>
       Discord：KOTARU8960
+    </p>
+    <p>更新情報や使い方など<br>
+      https://github.com/KOTARU8960/arknightsTRPGlog
     </p>
   </footer>
 </html>
