--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>アークナイツTRPG、クリエラ集計</title>
+    <title>アークナイツTRPGクリエラ集計</title>
     <script src="log.js"></script>
     <!-- <link href="style.css" rel="stylesheet" /> -->
   </head>
@@ -12,12 +12,12 @@
   </body>
   <footer>
     <p>ページを作った人：KOTARU<br>
-      github：https://github.com/KOTARU8960<br>
-      X：https://x.com/KOTARU49165176<br>
+      github：<a href="https://github.com/KOTARU8960">https://github.com/KOTARU8960</a><br>
+      X：<a href="https://x.com/KOTARU49165176">https://x.com/KOTARU49165176</a><br>
       Discord：KOTARU8960
     </p>
     <p>更新情報や使い方など<br>
-      https://github.com/KOTARU8960/arknightsTRPGlog
+      <a href="https://github.com/KOTARU8960/arknightsTRPGlog">https://github.com/KOTARU8960/arknightsTRPGlog</a>
     </p>
   </footer>
 </html>
