--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="utf-8" />
     <title>アークナイツTRPGクリエラ集計</title>
     <script src="log.js"></script>
-    <!-- <link href="style.css" rel="stylesheet" /> -->
+    <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <input type="file" id="file1" />
-    <pre id="pre1"></pre>
+    <div class="content">
+      <header>
+        <h1>アークナイツTRPGクリエラ集計</h1>
+        <p>下の「ファイルを選択」よりccfoliaログを選択してください。</p>
+      </header>
+      <main>
+        <input type="file" id="file1" />
+        <pre id="pre1"></pre>
+      </main>
+    </div>
+    <footer>
+      <p>ページを作った人：KOTARU<br>
+        github：<a href="https://github.com/KOTARU8960">https://github.com/KOTARU8960</a><br>
+        X：<a href="https://x.com/KOTARU49165176">https://x.com/KOTARU49165176</a><br>
+        Discord：KOTARU8960
+      </p>
+      <p>更新情報や使い方など<br>
+        <a href="https://github.com/KOTARU8960/arknightsTRPGlog">https://github.com/KOTARU8960/arknightsTRPGlog</a>
+      </p>
+    </footer>
   </body>
-  <footer>
-    <p>ページを作った人：KOTARU<br>
-      github：<a href="https://github.com/KOTARU8960">https://github.com/KOTARU8960</a><br>
-      X：<a href="https://x.com/KOTARU49165176">https://x.com/KOTARU49165176</a><br>
-      Discord：KOTARU8960
-    </p>
-    <p>更新情報や使い方など<br>
-      <a href="https://github.com/KOTARU8960/arknightsTRPGlog">https://github.com/KOTARU8960/arknightsTRPGlog</a>
-    </p>
-  </footer>
 </html>
