--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>下の「ファイルを選択」よりccfoliaログを選択してください。</p>
       </header>
       <main>
-        <input type="file" id="file1" />
+        <input type="file" id="file1" accept=".html"/>
         <pre id="pre1"></pre>
       </main>
     </div>
