--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         Discord：KOTARU8960
       </p>
       <p>更新情報や使い方など<br>
+        <p>最終更新 2025/2/11</p>
         <a href="https://github.com/KOTARU8960/arknightsTRPGlog">https://github.com/KOTARU8960/arknightsTRPGlog</a>
       </p>
     </footer>
