--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       </header>
       <main>
         <input type="file" id="file1" accept=".html"/>
+        <form id="checkbox"></form>
         <pre id="pre1"></pre>
       </main>
     </div>
@@ -24,7 +25,7 @@
         Discord：KOTARU8960
       </p>
       <p>更新情報や使い方など<br>
-        <p>最終更新 2025/2/11</p>
+        <p>最終更新 2025/2/13</p>
         <a href="https://github.com/KOTARU8960/arknightsTRPGlog">https://github.com/KOTARU8960/arknightsTRPGlog</a>
       </p>
     </footer>
