--- a/chara.html
+++ b/chara.html
@@ -11,9 +11,12 @@
       <header>
         <h1>アークナイツキャラ駒出力整形(スマホ向け)</h1>
         <p>駒出力をコピーした上でボタンを押してください</p>
+        <p>一部スマホ機種において駒出力をコピーするとダブルクォーテーションが追加され、貼りつけに失敗するという現象が確認されています。<br>
+          こちらはコピーした文字列を読み取り、増えたダブルクォーテーションを整理する物です。<br>
+          ボタンを押下するとコピーされた文字列を読み取り、自動的に整理された文字列をコピーします。</p>
       </header>
       <main>
-        <button type="button" id="btn">Read</button>
+        <button type="button" id="btn">ここを押下するとコピーした内容を整形して変更します。</button>
         <pre id="pre1"></pre>
       </main>
     </div>
